--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;900&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;700;900&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -8,6 +8,7 @@
 body {
   background-color: #01073d;
   color: #fff;
+  font-family: "Outfit", sans-serif;
 }
 
 li {
@@ -27,6 +28,7 @@ header {
   position: relative;
   font-family: "Outfit", sans-serif;
 }
+
 .logo-wrap {
   text-align: center;
   padding: 1rem 0;
@@ -99,4 +101,93 @@ header {
 
 .hamburger.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
+}
+
+/* hero */
+.hero {
+  text-align: center;
+}
+
+.hero h1 {
+  margin-bottom: 0.5rem;
+}
+
+.hero p {
+  margin-bottom: 3rem;
+}
+
+.hero-right img {
+  margin-top: 3rem;
+}
+
+.circle-one {
+  position: absolute;
+  right: 0;
+  top: 5rem;
+  bottom: 0;
+  user-select: none;
+  z-index: -1;
+}
+
+.circle-two {
+  position: absolute;
+  top: 0;
+  left: -5rem;
+  user-select: none;
+  z-index: -1;
+}
+
+/* text styles */
+.h1 {
+  font-family: "Outfit", sans-serif;
+  font-size: 3rem;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.body {
+  font-family: "Roboto", sans-serif;
+
+  font-size: 1.15rem;
+}
+
+.subheading {
+  font-family: "Outfit", sans-serif;
+  font-weight: 600;
+  font-size: 1.25rem;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+/* reusable */
+.container {
+  max-width: 70rem;
+  width: 90%;
+  margin: 0 auto;
+  padding: 2rem 0;
+}
+.btn {
+  background-color: #7f7fd6;
+  color: #fff;
+  padding: 1rem 1.5rem;
+  border-radius: 100px;
+}
+
+.ghost {
+  background: none;
+  border: 2px solid #9ad5d6;
+  color: #fff;
+  padding: 1rem 1.5rem;
+  border-radius: 100px;
+}
+
+/* media query */
+@media (max-width: 420px) {
+  .btn-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+  .btn {
+    margin-bottom: 1rem;
+  }
 }
